objects/Temporary_Knowledge__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Temporary Knowledge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Temporary Knowledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>